@@ -94,6 +94,10 @@
             <div id="address_contents" meld:id="stats_div_mid">
                 <div class="horizontal_contents">
                     <div class="vertical_contents">
+                        <figure>
+                            <img src="address_mem.png" alt="Address Memory Graph"/>
+                            <figcaption>Memory occupation</figcaption>
+                        </figure>
                         <div>
                             <table>
                                 <caption>Memory Statistics</caption>
@@ -114,6 +118,12 @@
                                 </tr>
                             </table>
                         </div>
+                    </div>
+                    <div class="vertical_contents">
+                        <figure>
+                            <img src="address_cpu.png" alt="Address CPU Graph"/>
+                            <figcaption>CPU loading</figcaption>
+                        </figure>
                         <div>
                             <table>
                                 <caption>Processor Statistics</caption>
@@ -136,20 +146,11 @@
                             </table>
                         </div>
                     </div>
-
-                    <figure>
-                        <img src="address_mem.png" alt="Address Memory Graph"/>
-                        <figcaption>Memory occupation</figcaption>
-                    </figure>
-
-                    <figure>
-                        <img src="address_cpu.png" alt="Address CPU Graph"/>
-                        <figcaption>CPU loading</figcaption>
-                    </figure>
-                </div>
-
-                <div class="horizontal_contents">
                     <div class="vertical_contents">
+                        <figure>
+                            <img src="address_io.png" alt="Address Network Graph"/>
+                            <figcaption>Network activity</figcaption>
+                        </figure>
                         <table>
                             <caption>Network Statistics</caption>
                             <tr>
@@ -172,11 +173,6 @@
                             </tr>
                         </table>
                     </div>
-
-                    <figure>
-                        <img src="address_io.png" alt="Address Network Graph"/>
-                        <figcaption>Network activity</figcaption>
-                    </figure>
                 </div>
             </div>
 
